# libslimproto

./: configure.ac  mytoken.txt  squeezelite-logs.txt  todo.txt
conf/: squeezeclient.conf
debian/: README  changelog  control  copyright  files  not-installed  squeezeclient-bin.dirs  squeezeclient-bin.install
src/: Makefile.am
src/include/: GstPlayerConfig.h  IAlsaVolumeControlConfig.h  IGstPlayerConfig.h  IPlayer.h  IVolumeControl.h  Makefile.am  SqueezeClient.h  SqueezeClientBuilder.h
src/include/squeezeclient/: SqueezeClientBuilder.h
src/libsqueezeclient/: ClientController.cpp  ClientController.h  CommandFactory.cpp  CommandFactory.h  LMSConnection.cpp  LMSConnection.h  PlayerController.cpp  PlayerController.h  SqueezeClient.cpp  SqueezeClientBuilder.cpp  SqueezeClientImpl.cpp  SqueezeClientImpl.h  Utils.cpp  Utils.h  libsqueezeclient.pc.in
src/player/: GstPlayer.cpp  GstPlayer.h  GstPlayerConfig.cpp  IPlayer.cpp
src/slimproto/: CommandFactory.cpp  CommandFactory.h  LMSConnection.cpp  PlayerController.cpp  PlayerController.h  Utils.cpp  Utils.h
src/squeezeclient/: SqueezeClient.cpp  SqueezeClientImpl.cpp  SqueezeClientImpl.h
src/squeezeclient-bin/: SCBConfig.cpp  SCBConfig.h  SCBController.cpp  SCBController.h  SqueezeClientBin.cpp  SqueezeClientBin.h  mainSqueezeClientBin.cpp
src/squeezeclient-bin/conf/: squeezeclient.conf  squeezeclient.service
src/squeezeclient-bin/dbus/: SqueezeClient.conf  squeezeclient-bin.xml
src/test/: GstPlayerTest.cpp  GstPlayerTest.h  SlimProtoTest.cpp  SlimProtoTest.h  mainGstPlayerTest.cpp  mainSlimProtoTest.cpp
src/volcontrol/: AlsaVolumeControl.cpp  AlsaVolumeControl.h
